[gd_scene load_steps=8 format=3 uid="uid://bhsfhj5dd74di"]

[ext_resource type="Script" path="res://Scripts/MovingCamera.gd" id="1_1wkv7"]
[ext_resource type="Script" path="res://Scripts/ConstantFollow.gd" id="2_7hmj0"]
[ext_resource type="Texture2D" uid="uid://ces4q01pcjd34" path="res://Assets/Enviroment/frame.png" id="3_6p1oi"]

[sub_resource type="Curve2D" id="Curve2D_36x2l"]
_data = {
"points": PackedVector2Array(-2.10826, 85.4344, 2.10826, -85.4344, 40, 194, -54.1905, 0.243172, 54.1905, -0.243172, 127, 111, -68.759, 12.3514, 68.759, -12.3514, 350, 255, -4.4054, 34.3797, 4.4054, -34.3797, 457, 203, 90.9197, -1.18921, -90.9197, 1.18921, 349, 86, 56.434, -8.54064, -56.434, 8.54064, 146, 255, -0.567621, 61.4344, 0.567621, -61.4344, 39, 204)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_lmjam"]
_data = {
"points": PackedVector2Array(-40.5866, 20.7652, 40.5866, -20.7652, 37, 69, -25.4846, -32.0917, 25.4846, 32.0917, 454, 78, 36.8111, -8.49487, -36.8111, 8.49487, 452, 276, 37.755, 28.3162, -37.755, -28.3162, 39, 276, -27.3724, -4.71937, 27.3724, 4.71937, 40, 71)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_wgho6"]
_data = {
"points": PackedVector2Array(17.9336, 60.408, -17.9336, -60.408, 98, 325, -44.3621, -0.943874, 44.3621, 0.943874, 217, 231, 32.0917, -60.408, -32.0917, 60.408, 341, 320, 13.2142, 46.2498, -13.2142, -46.2498, 101, 326)
}
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvhpi"]
size = Vector2(151, 111)

[node name="MovingCamera" type="Node2D" node_paths=PackedStringArray("cam_square", "cam_paths") groups=["camera"]]
script = ExtResource("1_1wkv7")
cam_square = NodePath("CamSquare")
cam_paths = [NodePath("CamPaths/CamPath1/PathFollow2D"), NodePath("CamPaths/CamPath2/PathFollow2D"), NodePath("CamPaths/CamPath3/PathFollow2D")]

[node name="OffsetTimer" type="Timer" parent="." groups=["camera"]]
wait_time = 0.5
autostart = true

[node name="StateTimer" type="Timer" parent="." groups=["camera"]]
autostart = true

[node name="Corrners" type="Node2D" parent="." groups=["camera"]]

[node name="Marker2D" type="Marker2D" parent="Corrners"]
position = Vector2(358, 238)

[node name="Marker2D2" type="Marker2D" parent="Corrners"]
position = Vector2(152, 137)

[node name="Marker2D3" type="Marker2D" parent="Corrners"]
position = Vector2(415, 345)

[node name="Marker2D4" type="Marker2D" parent="Corrners"]
position = Vector2(174, 345)

[node name="CamPaths" type="Node2D" parent="." groups=["camera"]]

[node name="CamPath1" type="Path2D" parent="CamPaths" groups=["camera"]]
position = Vector2(75, 79)
curve = SubResource("Curve2D_36x2l")

[node name="PathFollow2D" type="PathFollow2D" parent="CamPaths/CamPath1"]
position = Vector2(40, 194)
rotates = false
script = ExtResource("2_7hmj0")
speed = 50.0

[node name="_Timer_36739" type="Timer" parent="CamPaths/CamPath1/PathFollow2D" groups=["camera"]]
wait_time = 0.2
one_shot = true

[node name="CamPath2" type="Path2D" parent="CamPaths" groups=["camera"]]
position = Vector2(72, 76)
curve = SubResource("Curve2D_lmjam")

[node name="PathFollow2D" type="PathFollow2D" parent="CamPaths/CamPath2"]
position = Vector2(37, 69)
rotates = false
script = ExtResource("2_7hmj0")
speed = 50.0

[node name="_Timer_36740" type="Timer" parent="CamPaths/CamPath2/PathFollow2D" groups=["camera"]]
wait_time = 0.2
one_shot = true

[node name="CamPath3" type="Path2D" parent="CamPaths" groups=["camera"]]
position = Vector2(91, 64)
curve = SubResource("Curve2D_wgho6")

[node name="PathFollow2D" type="PathFollow2D" parent="CamPaths/CamPath3"]
position = Vector2(98, 325)
rotates = false
script = ExtResource("2_7hmj0")
speed = 50.0

[node name="_Timer_36741" type="Timer" parent="CamPaths/CamPath3/PathFollow2D" groups=["camera"]]
wait_time = 0.2
one_shot = true

[node name="CamSquare" type="Area2D" parent="." groups=["camera"]]
position = Vector2(311, 226)

[node name="Sprite2D" type="Sprite2D" parent="CamSquare" groups=["camera"]]
texture = ExtResource("3_6p1oi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CamSquare" groups=["camera"]]
shape = SubResource("RectangleShape2D_qvhpi")

[connection signal="timeout" from="OffsetTimer" to="." method="_on_offset_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
